# autotools-template-vala

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  autotools-template-vala.pc.in  autotools-template-vala.vala  productioncode.vala  unittestsvala.vala
test/: Makefile.am
tests/: Makefile.am  unittests.vala
